# slurmpp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: launch.json  settings.local.json
backend/: Dockerfile  pyproject.toml
backend/app/: cli.py  config.py  dependencies.py  main.py
backend/app/api/: admin.py  analytics.py  cluster.py  jobs.py  logs.py  submit.py
backend/app/auth/: jwt.py  router.py  service.py
backend/app/core/: cache.py  exceptions.py
backend/app/db/: crud.py  database.py  models.py
backend/app/slurm/: cli.py  client.py  mock.py  models.py  poller.py  rest.py
backend/tests/: conftest.py  test_auth.py  test_jobs.py
demo/: check-rootless.sh  check-status.sh  check-sudo.sh  copy-docker.sh  debug-rootless.sh  docker-compose.demo.yml  fix-docker-desktop.sh  fix-docker.ps1  fix-docker2.ps1  install-docker-wsl.sh  seed-jobs.sh  setup-docker-wsl.sh  setup-rootless-docker.sh  setup.sh  start-dockerd.sh
demo/backend/: Dockerfile
demo/slurm/: Dockerfile  cgroup.conf  entrypoint.sh  slurm.conf  supervisord.conf
docs/: slurm-plus-plus-overview.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: app.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  analytics.ts  client.ts  cluster.ts  jobs.ts
frontend/src/hooks/: useAuth.ts  useSSE.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: AdminPage.tsx  AnalyticsPage.tsx  DashboardPage.tsx  JobDetailPage.tsx  JobsPage.tsx  LoginPage.tsx  (+1 more)
nginx/: nginx.conf
(+11 files in other folders)
